tdf#121288: ReplaceFile WinAPI doesn't play nicely with WebDAV mapped drives

Change-Id: I0d7a64459de283dc10448e0086c66bedbf132553
Reviewed-on: https://gerrit.libreoffice.org/63133
Tested-by: Jenkins
Reviewed-by: Gabor Kelemen <kelemeng@ubuntu.com>
Tested-by: Gabor Kelemen <kelemeng@ubuntu.com>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>